# backend/api/gen/oas_operations_gen.go
@@ -27,11 +27,13 @@ const (
 	CreatePermissionActionGroupOperation                          OperationName = "CreatePermissionActionGroup"
 	CreateRoleOperation                                           OperationName = "CreateRole"
 	CreateUserOperation                                           OperationName = "CreateUser"
+	DeleteAppHostBindingOperation                                 OperationName = "DeleteAppHostBinding"
 	DeleteCollaborationWorkspaceOperation                         OperationName = "DeleteCollaborationWorkspace"
 	DeleteCurrentCollaborationWorkspaceBoundaryRoleOperation      OperationName = "DeleteCurrentCollaborationWorkspaceBoundaryRole"
 	DeleteFeaturePackageOperation                                 OperationName = "DeleteFeaturePackage"
 	DeleteMediaOperation                                          OperationName = "DeleteMedia"
 	DeleteMenuOperation                                           OperationName = "DeleteMenu"
+	DeleteMenuSpaceEntryBindingOperation                          OperationName = "DeleteMenuSpaceEntryBinding"
 	DeletePageOperation                                           OperationName = "DeletePage"
 	DeletePermissionActionOperation                               OperationName = "DeletePermissionAction"
 	DeleteRoleOperation                                           OperationName = "DeleteRole"
@@ -112,6 +114,7 @@ const (
 	ListFeaturePackagesOperation                                  OperationName = "ListFeaturePackages"
 	ListInboxOperation                                            OperationName = "ListInbox"
 	ListMediaOperation                                            OperationName = "ListMedia"
+	ListMenuSpaceEntryBindingsOperation                           OperationName = "ListMenuSpaceEntryBindings"
 	ListMenuSpaceHostBindingsOperation                            OperationName = "ListMenuSpaceHostBindings"
 	ListMenuSpacesOperation                                       OperationName = "ListMenuSpaces"
 	ListMessageDispatchRecordsOperation                           OperationName = "ListMessageDispatchRecords"
@@ -151,6 +154,7 @@ const (
 	SaveAppOperation                                              OperationName = "SaveApp"
 	SaveAppHostBindingOperation                                   OperationName = "SaveAppHostBinding"
 	SaveMenuSpaceOperation                                        OperationName = "SaveMenuSpace"
+	SaveMenuSpaceEntryBindingOperation                            OperationName = "SaveMenuSpaceEntryBinding"
 	SaveMenuSpaceHostBindingOperation                             OperationName = "SaveMenuSpaceHostBinding"
 	SaveMenuSpaceModeOperation                                    OperationName = "SaveMenuSpaceMode"
 	SavePermissionActionBatchTemplateOperation                    OperationName = "SavePermissionActionBatchTemplate"
