# backend/api/gen/oas_request_encoders_gen.go
@@ -420,6 +420,20 @@ func encodeSaveMenuSpaceRequest(
 	return nil
 }
 
+func encodeSaveMenuSpaceEntryBindingRequest(
+	req AnyObject,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := new(jx.Encoder)
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
+
 func encodeSaveMenuSpaceHostBindingRequest(
 	req AnyObject,
 	r *http.Request,
